// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad language 1`] = `
Object {
  "language": "Expected a value of type \`\\"en\\" | \\"ru\\" | \\"es\\" | \\"de\\" | \\"fr\\" | \\"pt\\" | \\"it\\" | undefined\` for \`language\` but received \`\\"xx\\"\`.",
}
`;

exports[`should be invalid for empty name 1`] = `
Object {
  "name": "Value must be non-empty string",
}
`;

exports[`should be invalid for extra fields 1`] = `
Object {
  "foo": "Expected a value of type \`undefined\` for \`foo\` but received \`\\"bar\\"\`.",
}
`;
